--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-.grid {width:960px;overflow:hidden;}
+.grid {width:960px;overflow:hidden;margin:0 auto;}
 
 .col-2-3 {
 	color:#555;
@@ -24,6 +24,7 @@
 	border:1px solid #555;
   width: 33.33%;
   float:left;
+  padding:20px;
 }
 
 
