--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 	color:#555;
 	background:pink;
 	border:1px solid #555;
-  width: 33.33%;
+  width: 30%;
   float:left;
   padding:20px;
-  margin-right: 20px;
+  margin-right: 2%;
 }
 
 
