--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 <body>
 <div class="grid grid-pad">
   <div class="col-1-3">
-     Sidebar
+     Chicken
   </div>
   <div class="col-1-3">
-     Sidebar
+     Beef
   </div>
   <div class="col-1-3">
-     Sidebar
+     Sushi
   </div>
 </div>
 
