--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
 	border:1px solid #555;
   width: 30%;
   float:left;
-  padding:20px;
+  padding:0px;
   margin-right: 2%;
+  position relative;
 }
+h2 {position:absolute; top:0;right:0;
+border:1px solid #555;
+padding:10px;}
+p {padding:0 20px 20px 20px;}
 
 
 
@@ -35,13 +40,19 @@
 <body>
 <div class="grid grid-pad">
   <div class="col-1-3">
-     Chicken
+     <h2>Chicken</h2>
+
+     <p>Organic migas vinyl four dollar toast seitan. Celiac mustache keffiyeh semiotics squid, dreamcatcher PBR&B chambray tattooed. Mumblecore hammock butcher vegan knausgaard.</p>
   </div>
   <div class="col-1-3">
-     Beef
+     <h2>Beef</h2>
+
+     <p>Salvia ramps kitsch try-hard art party skateboard. Poutine asymmetrical forage heirloom tofu four dollar toast four loko. </p>
   </div>
   <div class="col-1-3">
-     Sushi
+     <h2>Sushi</h2>
+
+     <p>Disrupt bicycle rights gastropub, pug pork belly shabby chic chartreuse echo park truffaut tote bag brooklyn. Bushwick swag deep v, bicycle rights drinking vinegar cray intelligentsia chicharrones. </p>p>
   </div>
 </div>
 
