updated max width

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ table {
   box-sizing: border-box;
 }
 .container {width:100%;}
-.grid {width:1100px;overflow:hidden;margin:0 auto;padding:10px;}
+.grid {max-width:1100px;overflow:hidden;margin:0 auto;padding:10px;}
 
 /* For mobile phones: */
 [class*="col-"] {
