--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ table {
 [class*="col-"] {
     width: 100%;
 }
+
+
 @media only screen and (min-width: 600px) {
     /* For tablets: */
     .col-m-1 {width: 8.33%;}
@@ -80,8 +82,9 @@ table {
     .col-m-11 {width: 91.66%;}
     .col-m-12 {width: 100%;}
 }
+
 @media only screen and (min-width: 768px) {
-    /* For desktop: */
+    /* For desktop: 
     .col-1 {width: 8.33%;}
     .col-2 {width: 16.66%;}
     .col-3 {width: 25%;}
@@ -93,10 +96,10 @@ table {
     .col-9 {width: 75%;}
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+    .col-12 {width: 100%;}*/
 }
 
-.col-4 {
+.col-4, .col-md-4{
 	color:#555;
 	background:#ccc;
 	border:1px solid #555;
@@ -105,16 +108,8 @@ table {
     position:relative;
 }
 
-.col-md-4 {
-	color:#555;
-	background:#ccc;
-	border:1px solid #555;
-    float:left;
-    padding:0;
-    margin:0 auto;
-    position:relative;
-}
-.col-4 h2 {
+
+h2 {
 border-left:1px solid #555;
 border-bottom:1px solid #555;
 background:#eee;
