--- a/index.html
+++ b/index.html
@@ -1,153 +1,34 @@
-<html>
+<!doctype html>
 <head>
-<title>Assignment for Class</title>
+	<title>Assignment for Class</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,300,400italic,600,600italic,700' rel='stylesheet' type='text/css'>
+	<link href='stylesheets/styles.css' rel='stylesheet' type='text/css'>
 
-<style>
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-*, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.container {width:100%;}
-.grid {max-width:1100px;overflow:hidden;margin:0 auto;padding:10px;}
-
-/* For mobile phones: */
-[class*="col-"] {
-    width: 100%;
-}
-
-
-@media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-m-1 {width: 8.33%;}
-    .col-m-2 {width: 16.66%;}
-    .col-m-3 {width: 25%;}
-    .col-m-4 {width: 33.33%;}
-    .col-m-5 {width: 41.66%;}
-    .col-m-6 {width: 50%;}
-    .col-m-7 {width: 58.33%;}
-    .col-m-8 {width: 66.66%;}
-    .col-m-9 {width: 75%;}
-    .col-m-10 {width: 83.33%;}
-    .col-m-11 {width: 91.66%;}
-    .col-m-12 {width: 100%;}
-}
-
-@media only screen and (min-width: 768px) {
-    /* For desktop: 
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}*/
-}
-
-.col-4, .col-md-4{
-	color:#555;
-	background:#ccc;
-	border:1px solid #555;
-    float:left;
-    padding:0;
-    position:relative;
-}
-
-
-h2 {
-border-left:1px solid #555;
-border-bottom:1px solid #555;
-background:#eee;
-text-align:center;
-padding:10px;
-margin:0;
-width:50%;
-position: absolute; top: 0; right: 0%; 
-clear:right;
-font-size:1.2em;
-}
-p {
-	padding:50px 20px 20px 20px;display:block;
-}
-
-
-
-</style>
 </head>
 <body>
-<div class="container">
-<div class="grid grid-pad">
-  <div class="col-4 col-md-4">
-     <h2>Chicken</h2>
+	<div class="container">
+	<div class="grid">
+	<h1 class="center">Menu</h1>
+	<p class="intro center">Chillwave tofu put a bird on it kogi keytar try-hard four loko stumptown tattooed lomo before they sold out godard. Narwhal slow-carb man bun keffiyeh artisan. Swag fap blog farm-to-table vinyl. Readymade letterpress butcher thundercats truffaut, quinoa vegan health goth. </p></div>
+		<div class="grid">
+			<div  id="one" class="col">
+				<h2 class="peach txt-white center">Chicken</h2>
 
-     <p>Organic migas vinyl four dollar toast seitan. Celiac mustache keffiyeh semiotics squid, dreamcatcher PBR&B chambray tattooed. Mumblecore hammock butcher vegan knausgaard.</p>
-  </div>
-  <div class="col-4 col-md-4">
-     <h2>Beef</h2>
+				<p >Organic migas vinyl four dollar toast seitan. Celiac mustache keffiyeh semiotics squid, dreamcatcher asymmetrical chambray tattooed. Mumblecore hammock butcher vegan knausgaard.</p>
+			</div>
+			<div  id="two" class="col">
+				<h2 class="maroon txt-white center">Beef</h2>
 
-     <p>Salvia ramps kitsch try-hard art party skateboard. Poutine asymmetrical forage heirloom tofu four dollar toast four loko. Celiac mustache keffiyeh semiotics squid. Mumblecore hammock butcher.</p>
-  </div>
-  <div class="col-4 col-md-4">
-     <h2>Sushi</h2>
+				<p >Salvia ramps kitsch try-hard art party skateboard. Poutine asymmetrical forage heirloom tofu four dollar toast four loko. Celiac mustache keffiyeh semiotics squid. Mumblecore hammock butcher.</p>
+			</div>
+			<div  id="three" class="col">
+				<h2 class="soft-green txt-white center">Sushi</h2>
 
-     <p>Disrupt bicycle rights gastropub, pug pork belly shabby chic chartreuse echo park truffaut tote bag brooklyn. Bushwick swag deep v, bicycle rights drinking vinegar cray intelligentsia chicharrones. </p>
-  </div>
-</div>
-</div>
+				<p >Disrupt bicycle rights gastropub, pug pork belly shabby chic chartreuse echo park truffaut tote bag brooklyn. Bushwick swag deep v, bicycle rights drinking vinegar cray intelligentsia chicharrones. </p>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
