--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div  id="one" class="col">
 				<h2 class="peach txt-white center">Chicken</h2>
 
-				<p >Organic migas vinyl four dollar toast seitan. Celiac mustache keffiyeh semiotics squid, dreamcatcher asymmetrical chambray tattooed. Mumblecore hammock butcher vegan knausgaard.</p>
+				<p >Organic migas vinyl four dollar toast seitan. Celiac mustache keffiyeh semiotics squid, dreamcatcher asymmetrical chambray tattooed. Mumblecore hammock butcher vegan.</p>
 			</div>
 			<div  id="two" class="col">
 				<h2 class="maroon txt-white center">Beef</h2>
