added copyright notice

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 				<p >Disrupt bicycle rights gastropub, pug pork belly shabby chic chartreuse echo park truffaut tote bag brooklyn. Bushwick swag deep v, bicycle rights drinking vinegar cray intelligentsia chicharrones. </p>
 			</div>
 		</div>
+		<p class="intro center copyright">Class Assignment for Coursera HTML/CSS/JS Class</p>
+		<p class="intro center">&copy; 2016 <a href="http://shumdesign.com">Shum Design Studio</a> | All Rights Reserved</p>
 	</div>
 </body>
 </html>
